force-app/main/default/objects/Resources_Expertise__c/Resources_Expertise__c.object-meta.xml
<CustomObject>
    <description>Resources and expertise</description>
    <label>Resources and Expertise</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Resources Exp Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources and Expertise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>