force-app/main/default/objects/Resources_Expertise__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Certified or not</description>
    <inlineHelpText>Certified?</inlineHelpText>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>