force-app/main/default/objects/Resources_Expertise__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expertise</description>
    <inlineHelpText>Expertise</inlineHelpText>
    <label>Expertise</label>
    <referenceTo>Expertise__c</referenceTo>
    <relationshipLabel>Resources and Expertise</relationshipLabel>
    <relationshipName>Resources_and_Expertise</relationshipName>
    <type>Lookup</type>
</CustomField>