force-app/main/default/objects/Resources_Expertise__c/fields/Expertise_Level__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Level__c</fullName>
    <description>Expertise level</description>
    <inlineHelpText>Expertise level</inlineHelpText>
    <label>Expertise Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>