force-app/main/default/objects/Resources_Expertise__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource</description>
    <inlineHelpText>Resource</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resources and Expertise</relationshipLabel>
    <relationshipName>Resources_and_Expertise</relationshipName>
    <type>Lookup</type>
</CustomField>